--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -16,6 +16,24 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
 
+  <ion-img src="assets/imgs/belimukena.png"style="width: 250px;height: 130px;display: block;margin: 0 auto;background-color: white"></ion-img>
+  <ion-card>
+    <ion-card-content>
+      <h2><b>Alamat</b></h2>
+      <p>Jalan Perintis Kemerdekaan No.76b,</p>
+      <p>Kelurahan Sambongjaya, Kecamatan Mangkubumi,</p>
+      <p>Tasikmalaya, 46181, Jawa Barat, Indonesia</p>
+      <hr>
+      <h2><b>Call Center</b></h2>
+      <p>082119415999</p>
+      <hr>
+      <h2><b>SMS Center</b></h2>
+      <p>082119415999</p>
+      <hr>
+      <h2><b>WhatsApp Center</b></h2>
+      <p>082119415999</p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
