--- a/src/pages/productdetail/productdetail.html
+++ b/src/pages/productdetail/productdetail.html
@@ -17,7 +17,7 @@
   <ion-card>
 
     <ion-item>
-      <h2>{{items?.name}}</h2>
+      <h2 style="color:mediumvioletred;font-size:20px">{{items?.name}}</h2>
       <p>Rp {{items?.price}}</p>
     </ion-item>
 
