--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -7,7 +7,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content style="background-color: rgb(248, 247, 247)">
+  <ion-img *ngIf="!items" src="assets/imgs/empty_cart.png"style="width: 400px;height: 500px;display: block;margin: 0 auto;background-color: white"></ion-img>
+  <ion-label text-center="">Keranjang Anda Kosong</ion-label>
     <ion-card *ngFor="let item of items; let i = index;" >
       <ion-list>
         <ion-item >
@@ -36,5 +38,5 @@
 </ion-content>
 
 <ion-footer no-border padding>
-  <button ion-button round block (click)="address()">Checkout</button>
+  <button *ngIf="items" ion-button round block (click)="address()">Checkout</button>
 </ion-footer>
