--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,7 +3,7 @@
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Best Seller" tabIcon="md-star"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="md-call"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Cart" tabIcon="cart"></ion-tab>
+  <ion-tab [tabBadge]="badge" [root]="tab4Root" tabTitle="Cart" tabIcon="cart"></ion-tab>
 </ion-tabs>
 <!--&lt;!&ndash;sudah login&ndash;&gt;-->
 <!--<ion-tabs *ngIf="">-->
