--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content style="background-color: rgb(248, 247, 247)">
-  <ion-img *ngIf="!items" src="assets/imgs/empty_cart.png"style="width: 400px;height: 500px;display: block;margin: 0 auto;background-color: white"></ion-img>
-  <ion-label text-center="">Keranjang Anda Kosong</ion-label>
+  <ion-img *ngIf="!items" src="assets/imgs/shopping-cart.svg"style="width: 400px;height: 500px;display: block;margin: 0 auto;background-color: #f8f7f7"></ion-img>
+  <ion-label *ngIf="!items"  text-center="">Keranjang Anda Kosong</ion-label>
     <ion-card *ngFor="let item of items; let i = index;" >
       <ion-list>
         <ion-item >
