--- a/src/pages/manualpayment/manualpayment.html
+++ b/src/pages/manualpayment/manualpayment.html
@@ -16,7 +16,7 @@
 <ion-content>
   <ion-card>
     <ion-card-content>
-      Total harga
+      <span item-start="">Total harga</span> <span item-end="">Rp.{{total | number}}</span>
     </ion-card-content>
   </ion-card>
   <ion-card>
