--- a/src/pages/payment/payment.html
+++ b/src/pages/payment/payment.html
@@ -16,7 +16,7 @@
 <ion-content style="background-color: rgb(248, 247, 247)">
     <ion-card>
       <ion-card-content>
-        Total harga
+        <span item-start="">Total harga</span> <span item-end="">Rp.{{total | number}}</span>
       </ion-card-content>
     </ion-card>
   <ion-label padding-left="">
