--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -29,14 +29,23 @@
 
   <ion-grid text-center no-padding>
 
-    <ion-row>
+    <ion-card *ngFor="let item of product; let i = index;" (click)="doDetailProducts(item)">
+        <ion-col col-4>
+          <img src="{{item.images}}">
+        </ion-col>
 
-      <ion-col col-6 *ngFor="let item of product; let i = index;" (click)="doDetailProducts(item)">
-        <div><img src="{{item.images}}"> <p>{{item.name}}</p>
-        </div>
-      </ion-col>
-
-    </ion-row>
+        <ion-col col-8>
+          <ion-row>
+            <p>{{item.name}}</p>
+          </ion-row>
+          <ion-row>
+            <p>{{item.name}}</p>
+          </ion-row>
+          <ion-row>
+            <p>{{item.name}}</p>
+          </ion-row>
+        </ion-col>
+    </ion-card>
 
   </ion-grid>
 
