--- a/src/pages/bestseller/bestseller.html
+++ b/src/pages/bestseller/bestseller.html
@@ -16,20 +16,27 @@
 </ion-header>
 
 
-<ion-content padding>
-  <ion-grid text-center>
-    <ion-row>
-      <ion-col col-6 *ngFor="let item of items; let i = index;" (click)="doDetailProducts(item)">
-        <div>
+<ion-content>
+  <ion-grid text-center no-padding>
+
+    <ion-card *ngFor="let item of items; let i = index;">
+
+      <ion-item>
+        <ion-avatar item-start (click)="doDetailProducts(item)">
           <img src="{{item.images}}">
-          <p>{{item.name}}</p>
-          <p>{{item.price}}</p>
-        </div>
-        <button ion-button block>
-          <ion-icon name="cart" padding-right></ion-icon>
-          Beli
-        </button>
-      </ion-col>
-    </ion-row>
+        </ion-avatar>
+        <ion-row  (click)="doDetailProducts(item)">
+          <h2>{{item.name}}</h2>
+        </ion-row>
+        <ion-row>
+          <ion-col col-4  (click)="doDetailProducts(item)"><p>{{item.price}}</p></ion-col>
+          <ion-col col-4  (click)="doDetailProducts(item)"></ion-col>
+          <ion-col col-4>
+            <button ion-button small (click)="doDetailProducts(item)">Buy</button>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+    </ion-card>
+
   </ion-grid>
 </ion-content>
