--- a/src/pages/product/product.html
+++ b/src/pages/product/product.html
@@ -13,22 +13,28 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <ion-grid text-center no-padding>
 
-  <ion-grid text-center>
-    <ion-row>
-      <ion-col col-6 *ngFor="let item of product; let i = index;" >
-        <div (click)="doDetailProducts(item)">
+    <ion-card *ngFor="let item of product; let i = index;">
+
+      <ion-item>
+        <ion-avatar item-start (click)="doDetailProducts(item)">
           <img src="{{item.images}}">
-          <p>{{item.name}} </p>
-          <p>Rp {{item.price}}</p>
-        </div>
-        <button ion-button block (click)="addToCart(item.id)">
-          <ion-icon name="cart" padding-right></ion-icon>
-          Beli
-        </button>
-      </ion-col>
-    </ion-row>
+        </ion-avatar>
+        <ion-row  (click)="doDetailProducts(item)">
+          <h2>{{item.name}}</h2>
+        </ion-row>
+        <ion-row>
+          <ion-col col-4  (click)="doDetailProducts(item)"><p>{{item.price}}</p></ion-col>
+          <ion-col col-4  (click)="doDetailProducts(item)"></ion-col>
+          <ion-col col-4>
+            <button ion-button small (click)="addToCart(item.id)">Buy</button>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+    </ion-card>
+
   </ion-grid>
   
   <ion-infinite-scroll (ionInfinite)="doInfinite($event)" *ngIf="page < totalPage">
