--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content style="background-color: rgb(248, 247, 247)">
-  <ion-img *ngIf="!items" src="assets/imgs/shopping-cart.svg"style="width: 400px;height: 500px;display: block;margin: 0 auto;background-color: #f8f7f7"></ion-img>
-  <ion-label *ngIf="!items"  text-center="">Keranjang Anda Kosong</ion-label>
+  <ion-img *ngIf="!items || items.length == 0" src="assets/imgs/shopping-cart.svg"style="width: 300px;height: 300px;display: block;margin: 0 auto;background-color: #f8f7f7"></ion-img>
+  <ion-label *ngIf="!items || items.length == 0"  text-center="">Keranjang Anda Kosong</ion-label>
     <ion-card *ngFor="let item of items; let i = index;" >
       <ion-list>
         <ion-item >
@@ -38,5 +38,6 @@
 </ion-content>
 
 <ion-footer no-border padding>
-  <button *ngIf="items" ion-button round block (click)="address()">Checkout</button>
+  <button  *ngIf="!items || items.length == 0" disabled ion-button round block>Checkout</button>
+  <button *ngIf="items && items.length != 0" ion-button round block (click)="address()">Checkout</button>
 </ion-footer>
