--- a/src/pages/confirmationpayment/confirmationpayment.html
+++ b/src/pages/confirmationpayment/confirmationpayment.html
@@ -14,19 +14,34 @@
 <ion-list>
 
   <ion-item>
-    <ion-label>Username</ion-label>
+    <ion-label>Atas Nama</ion-label>
     <ion-input type="text"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label>Password</ion-label>
-    <ion-input type="password"></ion-input>
+    <ion-label>Nomor Rekening</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Nama Bank</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Total Pembayaran</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Tanggal Pembayaran</ion-label>
+    <ion-input type="text"></ion-input>
   </ion-item>
 
 </ion-list>
 
 <div padding>
-  <button block>Sign In</button>
+  <button block>Confirm</button>
 </div>
 <ion-content>
 
