--- a/src/pages/orderdetail/orderdetail.html
+++ b/src/pages/orderdetail/orderdetail.html
@@ -92,5 +92,5 @@
 </ion-content>
 
 <ion-footer no-border padding>
-  <button  *ngIf="(product?.status_id == 1)" (click)="confirmationPayment()" ion-button round block>Konfirmasi Bayar</button>
+  <button  *ngIf="product?.status_id == 1" (click)="confirmationPayment()" ion-button round block>Konfirmasi Bayar</button>
 </ion-footer>
