--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,6 +3,8 @@
       <button ion-button large clear menuToggle icon-only >
         <ion-icon name='menu'></ion-icon>
       </button>
+
+      <img text-center="" style="height: 40px;width: auto;display: block;margin-left: 75px;" src="assets/imgs/belimukena.png">
           <!--<ion-searchbar [(ngModel)]="keyword" (ionInput)="getProduct()"></ion-searchbar>-->
   </ion-navbar>
   <ion-toolbar color="primary">
