--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -39,7 +39,7 @@
           <h2>{{item.name}}</h2>
         </ion-row>
         <ion-row>
-          <ion-col col-4  (click)="doDetailProducts(item)"><p>{{item.price}}</p></ion-col>
+          <ion-col col-4  (click)="doDetailProducts(item)"><p>Rp .{{item.price}}</p></ion-col>
           <ion-col col-4  (click)="doDetailProducts(item)"></ion-col>
           <ion-col col-4>
             <button ion-button small (click)="addToCart(item.id)">Beli</button>
