--- a/src/pages/confirmationpayment/confirmationpayment.html
+++ b/src/pages/confirmationpayment/confirmationpayment.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ConfirmationpaymentPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -41,7 +35,7 @@
 </ion-list>
 
 <div padding>
-  <button block>Confirm</button>
+  <button block (click)="confirmationPayment()">Confirm</button>
 </div>
 <ion-content>
 
