--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content style="background-color: rgb(248, 247, 247)">
-  <ion-img *ngIf="!items || items.length == 0" src="assets/imgs/shopping-cart.svg"style="width: 300px;height: 300px;display: block;margin: 0 auto;background-color: #f8f7f7"></ion-img>
+  <ion-img *ngIf="!items || items.length == 0" src="assets/imgs/shopping-cart.svg"style="width: 150px;height: 150px;display: block;margin: 0 auto;background-color: #f8f7f7;color: #faafc8;"></ion-img>
   <ion-label *ngIf="!items || items.length == 0"  text-center="">Keranjang Anda Kosong</ion-label>
     <ion-card *ngFor="let item of items; let i = index;" >
       <ion-list>
